# cuscuz-flag

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md
.github/ISSUE_TEMPLATE/: asking-questions.md  bug-reporting.md  request-for-change---feature-request.md
admin/: Cargo.toml  README.md  index.html
api/: .env  Cargo.toml  README.md
api/migrations/: 20221127114651_auth-schema.sql  20221213105307_organizations.sql  20230216002141_setup-feature-flags.sql
api/src/: error.rs  extractors.rs  main.rs  types.rs
api/src/handlers/: auth.rs  extractors.rs  mod.rs  orgs.rs  types.rs  validator.rs
api/src/repository/: accounts.rs  auth.rs  mod.rs  orgs.rs
dashboard/: .env  Cargo.toml  README.md  index.html
dashboard/src/: error.rs  main.rs  types.rs
dashboard/src/components/: email_input.rs  header.rs  list_errors.rs  mod.rs  modals.rs  navbar.rs  password_input.rs  user_context_provider.rs
dashboard/src/components/dashboard/: flags.rs  mod.rs  select_environments.rs
dashboard/src/components/modals/: mod.rs  new_environment.rs  new_feature_flag.rs
dashboard/src/hooks/: use_user_context.rs
dashboard/src/pages/: dashboard.rs  index.rs  mod.rs  org_settings.rs  setup_org.rs  signin.rs  signup.rs
dashboard/src/services/: auth.rs  mod.rs  org.rs  requests.rs
infrastructure/: docker-compose.yml
infrastructure/scripts/sql/: 1-init.sql
