[package]
name = "api"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
argon2 = "0.4.1"
axum = { version = "^0.6", features = ["headers"] }
dotenvy = "0.15.6"
hyper = { version = "0.14.23", features = ["full"] }
jsonwebtoken = "8.2.0"
once_cell = { version = "1.16.0", features = ["parking_lot"] }
rand = "0.8.5"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
sqlx = { version = "^0.6", features = ["uuid", "postgres", "chrono", "runtime-tokio-native-tls"] }
thiserror = "1.0.37"
tokio = { version = "1.22.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["auth", "cors"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
validator = { version = "0.16.0", features = ["derive"] }
zxcvbn = "2.2.1"


[dev-dependencies]
tower = { version = "0.4.13", features = ["util"] }
