[package]
name = "dashboard"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.6"
dotenvy_macro = "0.15.1"
gloo = "0.8.0"
lazy_static = "1.4.0"
log = "0.4.17"
parking_lot = "0.12.1"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.149", features = ["derive"] }
thiserror = "1.0.37"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.34"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.60", features = ["InputEvent", "Event", "HtmlInputElement", "HtmlSelectElement"]}
yew = { version = "0.20.0", features = ["csr" ] }
yew-hooks = "0.2.0"
yew-router = "0.17.0"
